--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,10 @@
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
 .section__title {
   position: relative;
   font-family: 'Inter', 'Arial', sans-serif;
