--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
 }
 
 .footer__title {
-  margin: 0 70px 20px;
+  margin: 0 0 20px;
   padding: 60px 0 20px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
@@ -19,7 +19,7 @@
 .footer-wrap {
   display: flex;
   justify-content: space-between;
-  padding: 0 70px;
+  padding: 0;
 }
 
 .footer__date {
