--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,10 @@
-.App {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  min-height: 100vh;
+body {
+  background-color: #202020;
+}
+
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
 }
 
 .section__title {
@@ -14,7 +16,7 @@
   line-height: 27px;
   letter-spacing: -0.04em;
   color: #FFFFFF;
-  margin: 0 70px;
+  margin: 0;
   padding: 0 0 23px;
   border-bottom: 1px solid #DADADA;
 }
