--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -4,7 +4,7 @@
 }
 
 .portfolio__title {
-  margin: 0 70px 50px;
+  margin: 0 0 50px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -15,7 +15,7 @@
 
 .portfolio__list {
   list-style: none;
-  padding: 0 70px;
+  padding: 0;
   margin: 0;
 }
 
