--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,7 +2,14 @@ body {
   background-color: #202020;
 }
 
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .container {
+  width: 100%;
   max-width: 1140px;
   margin: 0 auto;
 }
@@ -47,6 +54,10 @@ body {
 }
 
 @media (max-width: 768px) {
+  .container {
+    max-width: 708px;
+  }
+  
   .section__title {
     margin: 0 50px;
   }
@@ -59,6 +70,10 @@ body {
 }
 
 @media (max-width: 320px) {
+  .container {
+    max-width: 284px;
+  }
+  
   .section__title {
     font-size: 18px;
     line-height: 22px;
