--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,11 +12,20 @@
   justify-content: space-between;
 }
 
+.header-disable {
+  display: none;
+}
+
 .header__logo {
   width: 100%;
   max-width: 38px;
   height: auto;
   margin: 18px 0;
+}
+
+.header__nav {
+  display: flex;
+  align-items: center;
 }
 
 .header__links {
@@ -33,20 +42,6 @@
   text-decoration: none;
   transition: all .3s;
   color: #fff;
-}
-
-.header__nav-link {
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 18px;
-}
-
-.header__nav-link_active {
-  font-weight: 500;
-}
-
-.header__nav-link+.header__nav-link {
-  margin-left: 16px;
 }
 
 .header__link-signup:hover {
@@ -92,10 +87,17 @@
   opacity: 0.7;
 }
 
+@media (max-width: 768px) {
+}
+
 @media (max-width: 320px) {
   .header__link {
     font-size: 10px;
     line-height: 16px;
+  }
+
+  .header__link-account {
+    font-size: 14px;
   }
 
   .header__link-signin {
