--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -51,3 +51,35 @@
   color: #8B8B8B;
   padding: 0 16px;
 }
+
+@media (max-width: 768px) {
+  .card {
+    max-width: 339px;
+    height: 262px;
+  }
+}
+
+@media (max-width: 425px) {
+  .card {
+    max-width: 300px;
+    height: 237px;
+  }
+
+  .card__img {
+    margin-bottom: 14px;
+  }
+
+  .card-wrap {
+    margin-bottom: 14px;
+  }
+
+  .card__title {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .card__duration {
+    font-size: 10px;
+    line-height: 12px;
+  }
+}
