--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -68,7 +68,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 70px 73px;
+    padding: 0 0 73px;
   }
 
   .promo__content {
