--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -63,7 +63,7 @@
 
 @media (max-width: 768px) {
   .footer-wrap {
-    padding: 0 30px;
+    padding: 0;
   }
 }
 
@@ -75,7 +75,7 @@
   .footer__title {
     font-size: 12px;
     line-height: 15px;
-    margin: 0 12px;
+    margin: 0;
     padding: 40px 0 20px;
   }
 
