--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -54,11 +54,11 @@
   }
 
   .portfolio__title {
-    margin: 0 50px 50px;
+    margin: 0 20px 50px;
   }
 
   .portfolio__list {
-    padding: 0 50px;
+    padding: 0 20px;
   }
 
   .portfolio__list-link {
@@ -71,11 +71,11 @@
   .portfolio__title {
     font-size: 14px;
     line-height: 20px;
-    margin: 0 14px 40px;
+    margin: 0 0 40px;
   }
 
   .portfolio__list {
-    padding: 0 14px;
+    padding: 0;
   }
 
   .portfolio__list-link {
