--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -19,7 +19,6 @@
   font-weight: 400;
   font-size: 50px;
   line-height: 58px;
-  letter-spacing: -0.04em;
   color: #fff;
   margin: 0 0 36px;
 }
@@ -69,6 +68,7 @@
     flex-direction: column;
     align-items: center;
     padding: 0 0 73px;
+    max-width: 668px;
   }
 
   .promo__content {
@@ -84,7 +84,8 @@
     text-align: center;
     font-size: 40px;
     line-height: 50px;
-    margin: 0 0 22px;
+    margin: 0 0 20px;
+    letter-spacing: 0;
   }
 
   .promo__note {
@@ -111,5 +112,6 @@
   .promo__title {
     font-size: 30px;
     line-height: 38px;
+    letter-spacing: -0.04em;
   }
 }
