--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -16,14 +16,14 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 16px;
-  margin-bottom: 16px;
+  margin-bottom: 13px;
 }
 
 .card__img {
   width: 100%;
   height: auto;
   max-height: 203px;
-  margin-bottom: 16px;
+  margin-bottom: 10px;
 }
 
 .card__title {
@@ -39,7 +39,7 @@
 .card-icon {
   width: 14px;
   height: 12px;
-  margin-left: 12px;
+  margin-right: 8px;
 }
 
 .card__duration {
@@ -71,6 +71,7 @@
 
   .card-wrap {
     margin-bottom: 14px;
+    padding: 0 10px;
   }
 
   .card__title {
