--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 70px 0 15px;
+  padding: 65px 0 15px;
   margin: 0 0 30px;
   border-bottom: 1px solid #424242;
 }
@@ -132,6 +132,16 @@
   margin: 0;
 }
 
+@media (max-width: 768px) {
+  .search-from__wrap {
+    padding: 80px 0 15px;
+  }
+
+  .switch-wrap {
+    padding-bottom: 60px;
+  }
+}
+
 @media (max-width: 425px) {
   .search-form__button_primary {
     display: none;
@@ -141,5 +151,19 @@
     text-align: left;
     font-size: 18px;
     line-height: 22px;
+  }
+
+  .search-from__wrap {
+    padding: 88px 0 15px;
+    margin: 0 0 35px;
+  }
+
+  .switch-wrap {
+    padding-bottom: 20px;
+  }
+
+  .switch-text {
+    font-size: 11px;
+    line-height: 18px;
   }
 }
