--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,6 +1,7 @@
 .about-me {
   background-color: #202020;
-  padding: 110px 0 100px;
+  padding-top: 110px;
+  padding-bottom: 100px; 
 }
 
 .about-me__wrap {
@@ -55,7 +56,8 @@
 
 @media (max-width: 768px) {
   .about-me {
-    padding: 90px 0;
+    padding-top: 90px;
+    padding-bottom: 90px;
   }
 
   .about-me__wrap {
@@ -88,7 +90,8 @@
 
 @media (max-width: 640px) {
   .about-me {
-    padding: 70px 0;
+    padding-top: 70px;
+    padding-bottom: 70px;
   }
 
   .about-me .section__title {
