--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -21,10 +21,11 @@
 
 .card__img {
   width: 100%;
-  height: auto;
+  height: 203px;
   max-height: 203px;
   margin-bottom: 10px;
   border-radius: 6px;
+  object-fit: cover;
 }
 
 .card__title {
@@ -58,6 +59,9 @@
     max-width: 339px;
     height: 262px;
   }
+  .card__img {
+    height: 190px;
+  }
 }
 
 @media (max-width: 425px) {
@@ -68,6 +72,7 @@
 
   .card__img {
     margin-bottom: 14px;
+    height: 168px;
   }
 
   .card-wrap {
