--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -7,7 +7,7 @@
 }
 
 .not-found__code {
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 140px;
@@ -17,7 +17,7 @@
 }
 
 .not-found__text {
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -26,14 +26,15 @@
   margin: 0 0 184px;
 }
 
-.not-found__link {
-  font-family: 'Inter';
+.not-found__back {
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
   color: #4285F4;
-  text-decoration: none;
+  border: none;
+  background-color: transparent;
 }
 
 .not-found__link:hover {
