--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,9 +1,11 @@
 .profile {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 70px auto 40px;
   min-width: 410px;
+  overflow: hidden;
 }
 
 .profile-form {
