--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -4,7 +4,8 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 37px 24px;
-  margin-top: 70px;
+  margin: 70px auto 0;
+  max-width: 1140px;
 }
 
 .movies-list__more {
