--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,6 +10,8 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
 
 .container {
